Fix lock icons position on IE

--- a/source_assets/styles/_forms.scss
+++ b/source_assets/styles/_forms.scss
@@ -51,7 +51,6 @@
   float: left;
   width: 50%;
   height: 1.5rem;
-  line-height: 1.5rem;
   padding: 0;
   color: tint($primary-color, 40%);
 }
